# jcz-script-tools

./: .gitignore  CMakeLists.txt  README  bashrc  commit_list  diffwrap.sh  find_src  mydb  new  newfile  notify-run  rloc  runwpp  runwps  smake  svn_diff  until_success  vcxproj2cmake.perl  vcxproj2list  wps_commit
src/scs/: CMakeLists.txt  main.cpp
template/: class.sh  cpp.sh  h.sh  prj.sh  qt_prj.sh
